<resources>
    <string name="app_name">PAI&amp;TS</string>
    <string name="pakistan_animal_identification_traceability_system"><![CDATA[Pakistan Animal Identification\n& Traceability System]]></string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_provide_your_details">Please provide your details.</string>
    <string name="password">Password</string>
    <string name="_123456">123456</string>
    <string name="remember_for_30_days">Remember for 30 days</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_registration">New Registration</string>
    <string name="animal_registration">Animal Registration (4/5)</string>
    <string name="anmal_id">Anmal ID</string>
    <string name="_14786359">14786359</string>
    <string name="old_number_if_any">Old Number (If Any)</string>
    <string name="type_here">Type Here</string>
    <string name="animal_type">Animal Type</string>
    <string name="species">Species</string>
    <string name="breed">Breed</string>
    <string name="gender">Gender</string>
    <string name="age_d_o_b">Age/D.O.B</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="save_continue"><![CDATA[Save & Continue]]></string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="register">Register</string>
</resources>