<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_15sdp"
    tools:context=".NewRegistrationPIATS">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_regis_new_animal_rl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_round_edittext"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_2sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anmal_id"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_14786359"
                android:maxLength="10"
                android:padding="@dimen/_2sdp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray"
                android:textSize="@dimen/_16ssp" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/activity_regis_new_animal_rl"
        android:id="@+id/activity_regis_old_number_rl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_17sdp"
            android:paddingTop="@dimen/_5sdp"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:background="@drawable/registration_round_edittext"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_number_if_any"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_here"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_11ssp"
                android:textColorHint="@color/light_gray"
                android:padding="@dimen/_2sdp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/activity_regis_old_number_rl"
        android:id="@+id/activity_regis_animal_type_rl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_17sdp"
            android:paddingTop="@dimen/_7sdp"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:background="@drawable/registration_round_edittext"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animal_type"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/activity_regis_animal_type_rl"
        android:id="@+id/activity_regis_species_rl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_17sdp"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:paddingTop="@dimen/_7sdp"
            android:background="@drawable/registration_round_edittext"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/activity_regis_species_rl"
        android:id="@+id/activity_regis_class_rl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_17sdp"
            android:paddingTop="@dimen/_7sdp"
            android:background="@drawable/registration_round_edittext"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Class"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/activity_regis_class_rl"
        android:id="@+id/activity_regis_breed_rl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_17sdp"
            android:paddingTop="@dimen/_7sdp"
            android:background="@drawable/registration_round_edittext"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breed"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/activity_regis_breed_rl"
        android:id="@+id/activity_regis_gender_rl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_17sdp"
            android:paddingTop="@dimen/_7sdp"
            android:background="@drawable/registration_round_edittext"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/activity_regis_gender_rl"
        android:id="@+id/activity_regis_age_rl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_17sdp"
            android:paddingTop="@dimen/_7sdp"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:background="@drawable/registration_round_edittext"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_d_o_b"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"/>
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>