<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    android:background="@color/white"
    tools:context=".Footer_PIATS">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                android:layout_width="@dimen/_19sdp"
                android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                android:background="@drawable/home"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/home"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/light_blue"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/_19sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/footer_gray"
                    android:background="@drawable/duplicate"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:text="@string/register"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/footer_gray"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/_19sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/footer_gray"
                    android:background="@drawable/notes"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/home"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/footer_gray"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/_19sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/footer_gray"
                    android:background="@drawable/ic_setting"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/settings"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/footer_gray"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>